JAR file macos and gui manual